--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -14,7 +14,9 @@
                 [class.active]="cat == selectedCategory" (click)="changeCategory(cat)">
                 {{cat}}
             </button>
-            {{ categories.length }} Categories
+            <button class="btn btn-block btn-danger m-t-3" routerLink="/admin">
+                Admin
+            </button>
         </div>
         <div class="col-9 bg-success p-2">
             <div *ngFor="let product of products" class="card m-1 p-1 bg-light">
